--- a/scss/layouts/_contact.scss
+++ b/scss/layouts/_contact.scss
@@ -11,10 +11,10 @@
     }
 
     &__heading{
-        color: $secondary-color;
+        color: $heading-text;
 
         &--text {
-            color: $heading-text;
+            color: $secondary-color;
         }
     }
 
@@ -35,12 +35,14 @@
 }
 
 .form-control {
+    color: #7b8285;
     background-color: $card-form-background-color;
     border: 1px solid $card-form-background-color;
     box-shadow: 0px 0px 3px 0px #f1e1a6;
-
+    
     &:focus {
-        background-color: none;
+        color: #c5d1d8;
+        background-color: #0c405a;
         border: 1px solid $card-form-background-color;
         box-shadow: 0px 0px 3px 0px #f1e1a6;
     }
