--- a/scss/layouts/_intro.scss
+++ b/scss/layouts/_intro.scss
@@ -1,59 +1,56 @@
 @use 'intro';
 
 .hero {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // height: 100vh;
-    // height: calc(100vh - 63px);  
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	// height: 100vh;
+	// height: calc(100vh - 63px);
 
-    @media (max-width: $breakpoint-small) {
+	@media (max-width: $breakpoint-small) {
+		align-items: inherit;
 
-        align-items: inherit;
+		&__img {
+			width: 90%;
+			display: flex;
+			margin: auto;
+		}
+	}
 
-        &__img {
-            width: 90%;
-            display: flex;
-            margin: auto;
-        }
-    }
-
-    &__img {
+	&__img {
         transition: transform 0.8s;
-    
-        &:hover {
-            transform: perspective(200px) rotateY(-1deg)
-        }
-    }
-    
+        margin: -9% -1%;
 
-    &__first-columm {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    &__text{
-        font-size: 2rem;
-        font-style: italic;
-        color: $heading-text;
-        text-transform: capitalize;
+		&:hover {
+			transform: perspective(200px) rotateY(-1deg);
+		}
+	}
 
-        @media (max-width: $breakpoint-small) {
-            font-size: 1.2rem;
-        }
-    }
+	&__first-columm {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 
-    &__heading{
-        color: $secondary-color;
-        white-space: nowrap;
+	&__text {
+		font-size: 2rem;
+		font-style: italic;
+		color: $heading-text;
+		text-transform: capitalize;
 
-        @media (max-width: $breakpoint-small) {
-            font-size: 1.3rem;
-            margin-top: 25px;
-        }
-    }
+		@media (max-width: $breakpoint-small) {
+			font-size: 1.2rem;
+		}
+	}
 
+	&__heading {
+		color: $secondary-color;
+		white-space: nowrap;
 
+		@media (max-width: $breakpoint-small) {
+			font-size: 1.3rem;
+			margin-top: 25px;
+		}
+	}
 }
