--- a/scss/layouts/_contact.scss
+++ b/scss/layouts/_contact.scss
@@ -39,6 +39,7 @@
     background-color: $card-form-background-color;
     border: 1px solid $card-form-background-color;
     box-shadow: 0px 0px 3px 0px #f1e1a6;
+    transition: all .3s ease-in-out;
     
     &:focus {
         color: #c5d1d8;
