--- a/scss/layouts/_navbar.scss
+++ b/scss/layouts/_navbar.scss
@@ -28,16 +28,25 @@
 
 	.nav-link {
 		font-style: italic;
+		color: $secondary-color!important;
+		font-size: inherit;
 		
 		&:hover {
-			color: rgba(0, 0, 0, 0.7);
+			color: $heading-text!important;
 			text-underline-position: under;
 			text-decoration: underline;
-			text-decoration-color: #faf1e6;
-			text-decoration-thickness: 4px;
-			transition-duration: 1s;
-			transition-timing-function: ease-in-out;
-			transform-style: preserve-3d;
+			text-decoration-color: $secondary-color;
 		}
+	}
+}
+
+.logo-img img {
+	opacity: .9;
+	width: 100px;
+	height: 75px;
+
+	@media (max-width: $breakpoint-small) {
+		width: 75px;
+		height: 60px;
 	}
 }
