--- a/scss/style.css
+++ b/scss/style.css
@@ -30,17 +30,28 @@
 
 .navbar .nav-link {
   font-style: italic;
+  color: #ebeef2d4 !important;
+  font-size: inherit;
 }
 
 .navbar .nav-link:hover {
-  color: rgba(0, 0, 0, 0.7);
+  color: #f3f4f685 !important;
   text-underline-position: under;
   text-decoration: underline;
-  text-decoration-color: #faf1e6;
-  text-decoration-thickness: 4px;
-  transition-duration: 1s;
-  transition-timing-function: ease-in-out;
-  transform-style: preserve-3d;
+  text-decoration-color: #ebeef2d4;
+}
+
+.logo-img img {
+  opacity: .9;
+  width: 100px;
+  height: 75px;
+}
+
+@media (max-width: 576px) {
+  .logo-img img {
+    width: 75px;
+    height: 60px;
+  }
 }
 
 @use 'typography';
@@ -184,6 +195,7 @@ h4 {
   border-radius: 50%;
   border: 2px solid #f3f4f685;
   transition: transform 0.8s;
+  opacity: .6;
 }
 
 .about__img:hover {
@@ -357,6 +369,7 @@ strong {
   background-color: #fdfaf6;
   border: 1px solid #fdfaf6;
   box-shadow: 0px 0px 3px 0px #f1e1a6;
+  transition: all .3s ease-in-out;
 }
 
 .form-control:focus {
