--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -5,6 +5,7 @@
         padding: 1.5rem!important;
         display: flex;
         justify-content: space-evenly;
+        box-shadow: 1px 27px 20px -30px #f3f4f685;
     }
 
     &__icon {
