--- a/scss/layouts/_intro.scss
+++ b/scss/layouts/_intro.scss
@@ -35,9 +35,9 @@
 
 	&__text {
 		font-size: 2rem;
-		font-style: italic;
 		color: $heading-text;
 		text-transform: capitalize;
+		line-height: 2.2rem;
 
 		@media (max-width: $breakpoint-small) {
 			font-size: 1.2rem;
