Incrising font sinze on js text

--- a/scss/layouts/_intro.scss
+++ b/scss/layouts/_intro.scss
@@ -47,6 +47,8 @@
 	&__heading {
 		color: $secondary-color;
 		white-space: nowrap;
+		margin: 8px 0;
+    	font-size: 1.5rem;
 
 		@media (max-width: $breakpoint-small) {
 			font-size: 1.3rem;
