--- a/scss/style.css
+++ b/scss/style.css
@@ -1,7 +1,7 @@
 @use 'navbar';
 .navbar {
   padding: 0 2.5rem;
-  box-shadow: 1px 27px 20px -30px #f3f4f685;
+  box-shadow: 0px -10px 25px 0px #f3f4f685;
 }
 
 @media (max-width: 576px) {
@@ -146,6 +146,8 @@ h4 {
 .hero__heading {
   color: #ebeef2d4;
   white-space: nowrap;
+  margin: 8px 0;
+  font-size: 1.5rem;
 }
 
 @media (max-width: 576px) {
