--- a/scss/layouts/_typography.scss
+++ b/scss/layouts/_typography.scss
@@ -3,11 +3,9 @@
 body {
 	line-height: 1.5rem;
 	font-size: 1rem;
-	font-family: 'Lato', sans-serif;
-	background: #0c405a;
+	font-family: 'Quicksand', sans-serif;
 
 	p {
-		font-style: inherit;
 		color: $primary-color;
 	}
 
