--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,14 +1,17 @@
-$primary-color: #a3b0ba;
-$secondary-color: #ebeef2d4;
+$primary-color: #969696;
+$secondary-color: rgb(251, 105, 20);
 
-$body-color: #0c405a;
+$background-color: rgb(253, 251, 251);
+$color: #fb6914;
 $footer-color: #c1c2c261;
-$heading-text: #f3f4f685;
+$heading-text: #188cc5;
 $portfolio-item: #a3a3a3;
 $portfolio-list-item: #a3a3a33b;
+$portfolio-background-color: #3a3f550d;
 $button-hover: $secondary-color;
+$nav-link-color: #074683;
 
-$card-form-background-color: #fdfaf6;
+$card-form-background-color: #f3f1f2;
 
 // Breakpoints
 $breakpoint-small: 576px;
